Fri Jul 30 11:28:02 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkspline.h: 
	* beast-gtk/gxk/gxkspline.c: natural and not-a-knot interpolating spline
	implementation with inverse lookup (abscissa finder).

	* beast-gtk/gxk/splinetest.c: spline test porgram.

Sat Jul 24 08:20:32 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstsnifferscope.c (scope_probes_notify): request all
	probe features. re-enabled and adapted scope drawing code.

	* library/scripts/modules2grid.scm (modules2grid):
	* library/scripts/song-parts-operations.scm (song-parts-operation): use
	(bse-container-list-children) since ...-list-items is gone now.

Fri Jul 23 20:05:53 2004  Tim Janik  <timj@gtk.org>

        * *.h, *.c, *.cc: globally renamed GSL Engine to BSE Engine.

Fri Jul 23 14:58:49 2004  Tim Janik  <timj@gtk.org>

	* docs/site-links-synthesis.texi: link updates.

Sat Jul 17 12:36:35 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstsnifferscope.[hc]: disabled drawing code. ported
	over to BseProbe API.

	* beast-gtk/bsttrackroll.c: set the track-output sorce as scope target.

Wed Jul 14 01:40:50 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstprofiler.c: show thread-id if developer hints are
	enabled. don't show priority for totals.

Wed Jul 14 00:15:49 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstbusview.h:
	* beast-gtk/bstbusview.c:
	* beast-gtk/dialogs/radgets-beast.xml: s/SongBus/Bus/.

	* beast-gtk/bstsongbusview.c:
	* beast-gtk/bstsongbusview.h: removed in favour of bstbusview.*.

Tue Jul 13 22:59:21 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstbusview.c:
	* beast-gtk/bstbusview.h: CVS copied from beast-gtk/bstsongbusview.[hc].

Tue Jul 13 22:42:24 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstmain.c (main): raised the priority of the BSE context
	source, so handling BSE context events still occours prior to handling
	of G_PRIORITY_HIGH events.

	* beast-gtk/bstsnetrouter.[hc]: implemented link-update handling in an